# tormentor

./: .gitignore  .gitmodules  README.md  README.rst  setup.cfg  setup.py
diamond_square/: __init__.py  diamond_square.py
docs/: Makefile  augmentation_example_list.json  render_augmentation_examples.py  requirements.txt
docs/source/: abstract_augmentations.rst  color_augmentations.rst  composite_augmentations.rst  conf.py  document_augmentations.rst  index.rst  index.rst.bkup  spatial_augmentations.rst  tormentor.rst  tormentor_functions.rst  tormetor.rst
examples/: augment_mnist.py  bench_batch_vs_sample.py  demo_diamond_square.py  text_render.py
examples/binarization/: requirements.txt
examples/gui_tweak/: tweak.py
examples/text_segmentation/: README.md  dibco.py  inference.py  no_border_conv.py  plot_performance.py  rr_ds.py  train.py  unet.py  unet2.py  util.py
test/: test_augmentation.py  test_augmented_pointclouds.py  test_dataset.py  test_scale_and_pad_as_needed.py  util.py
test/pytest/: test_dataset.py  (+7 more)
tormentor/: __init__.py  ablation.py  augmentation_cascade.py  augmentation_choice.py  augmented_dataloader.py  augmented_dataset.py  backgrounds.py  base_augmentation.py  channel_augmentations.py  color_augmentations.py  counterfactuals.py  data_utils.py  deterministic_image_augmentation.py  factory.py  layer.py  random.py  random_network.py  render_sampling_field.py  resizing_augmentation.py  sampling_fileds.py  shreded_paper.py  spatial_augmentations.py  spatial_image_augmentation.py  static_image_augmentation.py  util.py  wet_paper.py  wrap.py
(+12 files in other folders)
