[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE
description-file = README.rst

[pep8]
max-line-length = 120

[flake8]
max-line-length = 120


[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise
    if 0:
    if __name__ == .__main__.:
